--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "Forge-Analytics",
+  "name": "Kittens-n-Puppies-GIF-Search",
   "version": "0.0.1",
-  "description": "Forge Analytics Dashboard built with D3 and Angular",
+  "description": "Kittens and Puppies Gif Search App",
   "main": "app.js",
   "scripts": {
     "test": "test"
   },
   "keywords": [
-    "d3",
+    "gif",
+    "kittens",
+    "puppies",
     "angular",
-    "javascript",
-    "analytics",
-    "svg"
+    "typescript",
+    "javascript"
   ],
   "author": "xavier glab",
   "dependencies": {
