--- a/bower.json
+++ b/bower.json
@@ -17,10 +17,9 @@
   "dependencies": {
     "angular": "~1.5.0",
     "angular-route": "latest",
-    "d3": "latest"
+    "angular-ui-bootstrap": "~1.3.1"
   },
   "devDependencies": {
-    "d3": "*",
     "jquery": "^2.2.0"
   }
 }
