--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
   ],
   "author": "xavier glab",
   "dependencies": {
-    "angular": "~1.5.0",
+    "angular": "~1.5.3",
+    "angular-animate": "~1.5.3",
     "angular-route": "latest",
     "angular-ui-bootstrap": "~1.3.1"
   },
