--- a/package.json
+++ b/package.json
@@ -23,6 +23,15 @@
     "gulp-concat": "~2.6.0",
     "gulp-watch": "~4.3.5",
     "gulp-uglify": "~1.5.2",
-    "gulp-typescript": "~2.11.0"
+    "gulp-typescript": "~2.11.0",
+    "karma": "~0.11.0",
+    "karma-jasmine": "",
+    "karma-chrome-launcher": "",
+    "karma-firefox-launcher": "",
+    "karma-coffee-preprocessor": "",
+    "karma-html2js-preprocessor": "",
+    "karma-phantomjs-launcher": "",
+    "karma-requirejs": "",
+    "karma-script-launcher": ""
   }
 }
