--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "angular": "~1.5.3",
     "angular-animate": "~1.5.3",
     "angular-route": "latest",
+    "angular-mocks": "~1.5.3",
     "angular-ui-bootstrap": "~1.3.1"
   },
   "devDependencies": {
